--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
                     </div>
                 </section>
             </main>
+            <footer class="footer">
+                <a href="#" class="google_play">
+                    <img src="assets/img/googleplay.png" alt="Google Play">
+                </a>
+                <a href="#" class="app_store">
+                    <img src=" assets/img/appstore.png" alt="App Store">
+                </a>
+            </footer>
         </div>
     </body>
 
